# fastapi-docker-template

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: app.py
tests/: test_template_app.py
