[tool.poetry]
name = "template-app"
version = "0.1.0"
description = "Template App"
authors = ["your name <email@example.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "." }
]
license = "Choose a license"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.0"}
gunicorn = "^23.0.0"
pydantic = "^2.8.2"
aiohttp = "^3.10.3"
httpx = {extras = ["http2"], version = "^0.27.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.8"
pylint = "^3.2.6"
autopep8 = "^2.3.1"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"